# particle-demo

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  coop_config.txt  particle-demo  particles-demo
include/: camera.h  collision_detection.h  debug_line.h  glm  input_management.h  main.h  observer.h  particle.h  setup.h  shader.h  texture.h
include/glad/: glad.h
include_other/glad/: glad.h
shader/fragment/: basic.fs  fire_particle.fs  line.fs  particle.fs
shader/geometry/: basic.gs  particle.gs
shader/vertex/: basic.vs  line.vs  particle.vs
src/: Shader.cpp  collision_detection.cpp  glad.cpp  input_management.cpp  main.cpp  particle.cpp  setup.cpp
